k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker-service
  template:
    metadata:
      labels:
        app: worker-service
    spec:
      containers:
        - name: worker-service
          image: text-processor:dev
          imagePullPolicy: IfNotPresent
          command: ["uv"]
          args: ["run", "uvicorn", "app.worker_service:app", "--host", "0.0.0.0", "--port", "8000"]
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: worker-service
spec:
  selector:
    app: worker-service
  ports:
      - port: 8000
        targetPort: 8000
